# climate-funding-agent

./: README.md  crew.py  crew.yaml  main.py  pyproject.toml  requirements.txt
src/climate_funding_agent/: crew.py  main.py
src/climate_funding_agent/config/: agents.yaml  tasks.yaml
