[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-funding-agent"
version = "0.1.0"
description = "Agentic AI system for matching climate startups with seed funding"
requires-python = ">=3.10"

dependencies = [
  "crewai>=0.30.0",
  "langchain>=0.1.0",
  "python-dotenv",
  "requests",
  "beautifulsoup4"
]
