[tool.poetry]
name = "climate-funding-agent"
version = "0.1.0"
description = "Agentic AI for climate startup funding discovery"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = "^1.9.3"
langchain = "^0.1.0"
requests = "*"
beautifulsoup4 = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
